--- a/public/userapps/testUser/index.html
+++ b/public/userapps/testUser/index.html
@@ -7,24 +7,11 @@
   <link rel="import" href="amalgam/amalgam.html">
   <link rel="stylesheet" href="hardware.css">
   <style>
-  </style>
+undefined  </style>
   </head>
   <body>
-<button id="turnON" onclick="turnLEDON()">LED ON</button>
-<button id="turnOFF" onclick="turnLEDOFF()">LED OFF</button>
-<span id="myLED">OFF</span>
-  
-
+undefined
   <script>
-function turnLEDON() {
-  var text = document.getElementById("myLED");
-  text.innerHTML = "ON";
-}
-
-function turnLEDOFF() {
-  var text = document.getElementById("myLED");
-  text.innerHTML = "OFF";
-}
-  </script>
+undefined  </script>
   </body>
 </html>
