Disable HDMI Screen Button when part is Drop, Fix Run Mode CSS

--- a/public/userapps/testUser/index.html
+++ b/public/userapps/testUser/index.html
@@ -7,11 +7,28 @@
   <link rel="import" href="amalgam/amalgam.html">
   <link rel="stylesheet" href="hardware.css">
   <style>
-undefined  </style>
+button {
+  color: blue;
+}
+
+#text {
+  display: inline-block;
+}
+  </style>
   </head>
   <body>
-undefined
+<button id="myButton" onclick="test()">test</button>
+<br>
+<div id="text">Counter: 0</div>
+
   <script>
-undefined  </script>
+var counter = 0;
+function test() {
+  console.log("button click");
+  var text = document.getElementById("text");
+  counter++;
+  text.innerHTML = "Counter: " + counter;
+}
+  </script>
   </body>
 </html>
