--- a/public/userapps/testUser/index.html
+++ b/public/userapps/testUser/index.html
@@ -7,28 +7,11 @@
   <link rel="import" href="amalgam/amalgam.html">
   <link rel="stylesheet" href="hardware.css">
   <style>
-button {
-  color: blue;
-}
-
-#text {
-  display: inline-block;
-}
-  </style>
+undefined  </style>
   </head>
   <body>
-<button id="myButton" onclick="test()">test</button>
-<br>
-<div id="text">Counter: 0</div>
-
+undefined
   <script>
-var counter = 0;
-function test() {
-  console.log("button click");
-  var text = document.getElementById("text");
-  counter++;
-  text.innerHTML = "Counter: " + counter;
-}
-  </script>
+undefined  </script>
   </body>
 </html>
